# Croplines

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Cmakelists.txt  LICENSE  README.md  app.py  build.bat  cvtry.py  imgalgor.py  prj.py  pyproject.toml  requirements.txt  run.bat  wxGLScene.py  wxUI.cpp  wxUI.fbp  wxUI.h  wxUI.py
.github/workflows/: cpp-linter.yml
.zed/: debug.json  settings.json  tasks.json
src/: License.hpp  app.cpp  app.h  canvas.cpp  canvas.h  config.cpp  config.h  ctrl.cpp  ctrl.h  prj.cpp  prj.h  resource.h  resource.rc  util.h  wxUI.cpp  wxUI.h
src/core/: Document.cpp  Document.hpp  DocumentData.hpp  Event.hpp  ImageScaleModel.cpp  ImageScaleModel.hpp  Page.cpp  Page.hpp
src/ui/: App.cpp  App.hpp  Canvas.cpp  Canvas.hpp  ConfigPanel.cpp  ConfigPanel.hpp  Defs.hpp  MainFrame.cpp  MainFrame.hpp  MenuBar.cpp  MenuBar.hpp  ToolBar.cpp  ToolBar.hpp
src/ui/components/: SliderWithSpin.cpp  SliderWithSpin.hpp
src/utils/: Asserts.hpp  Compare.cpp  Compare.hpp
